Velcro test First SandBox/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <formula>Lead.Street +  Contact.MailingStreet</formula>
        <label>Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Manager_Email__c</fullName>
        <label>Channel Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_2__c</fullName>
        <formula>CompanyOrAccount</formula>
        <label>Company 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Interest__c</fullName>
        <label>Contact Interest</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Contact_Email__c</fullName>
        <formula>Campaign.Referral_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Contact_Phone__c</fullName>
        <formula>Campaign.Referral_Contact__r.Phone</formula>
        <label>Distributor Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <formula>Campaign.Referral_Account_Channel__r.Name</formula>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_SBU__c</fullName>
        <formula>Contact.Account_SBU__c + TEXT(Lead.SBU__c)</formula>
        <label>Member SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referall_Contact__c</fullName>
        <formula>Campaign.Referral_Contact__r.FirstName +&quot; &quot; + Campaign.Referral_Contact__r.LastName</formula>
        <label>Referall Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <label>Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity_Date__c</fullName>
        <inlineHelpText>Date of the last Campaign Monitor activity.</inlineHelpText>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity__c</fullName>
        <description>Last Campaign Monitor activity type.</description>
        <inlineHelpText>Last Campaign Monitor activity type.</inlineHelpText>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>